# feng-shui-ai

./: .env.example  .gitignore  AGENTS.md  PLAN.md  PLAN_TASKS.md
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/core/: __init__.py  config.py  logger.py  utils.py
backend/app/core/prompts/: ElementExtraction.md  ElementNamingScheme.md  FengShuiScoring-Compass.md  FengShuiScoring-FiveElements.md  FengShuiScoring-FormSchool.md  FengShuiScoring-ThreeDoorGate.md  FengShuiScoring.md  MergePhotos.md  RoomLayout.md  __init__.py
backend/app/models/: __init__.py  schemas.py
backend/app/routes/: __init__.py  elements.py  evaluate.py  score.py  suggest.py
backend/app/services/: __init__.py  image_processor.py  layout.py  llm.py  merge.py  scoring.py  session.py  vision.py
backend/app/services/prompts/: ElementExtraction.md  ElementNamingScheme.md  FengShuiScoring-Compass.md  FengShuiScoring-FiveElements.md  FengShuiScoring-ThreeDoorGate.md  FengShuiScoring.md
backend/lib/feng-shui-evaluator/prompts/: MergePhotos.md
backend/tests/: conftest.py  helpers.py
backend/tests/e2e/: config.toml  conftest.py  manual_test.py  test_full_pipeline.py  test_session_cleanup.py
backend/tests/integration/: test_add_element_endpoint.py  test_evaluate_endpoint.py  test_layout_service.py  test_merge_service.py  test_score_endpoint.py  test_scoring_service.py  test_session.py  test_suggest_endpoint.py  test_vision_service.py
backend/tests/unit/: test_image_processor.py
frontend/: README.md  index.html  nginx.conf  package-lock.json  package.json  (+1 more)
(+24 files in other folders)
