[project]
name = "backend"
version = "0.1.0"
description = "FengShuiAI FastAPI backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic-settings>=2.7.0",
    "python-multipart>=0.0.20",
    "pillow>=10.4.0",
    "opencv-python-headless>=4.10.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-timeout>=2.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "e2e: end-to-end tests that hit the real LLM endpoint (manual only, 60s timeout)",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]